--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
+    <span class="js-weather"></span>
     <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
+      <input class="formInput" type="text" placeholder="What is your name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
     <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
+      <input class="toDoInput" type="text" placeholder="Write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
